--- a/assets/scss/widgets/info-box/_info-box.scss
+++ b/assets/scss/widgets/info-box/_info-box.scss
@@ -15,9 +15,6 @@
             height: 1em;
         }
     }
-    .pp-info-box-content {
-        flex-grow: 1;
-    }
     &-divider-wrap {
         font-size: 0;
         line-height: 0;
@@ -35,6 +32,7 @@
         flex-direction: row;
         .pp-info-box-icon-wrap {
             display: flex;
+            flex-shrink: 0;
             margin-right: 20px;
         }
         .pp-info-box-icon,
@@ -49,6 +47,7 @@
         flex-direction: row-reverse;
         .pp-info-box-icon-wrap {
             display: flex;
+            flex-shrink: 0;
             margin-left: 20px;
         }
         .pp-info-box-icon,
